src/test/ui/span/vec_refs_data_with_early_death.stderr
error: `x` does not live long enough
  --> $DIR/vec_refs_data_with_early_death.rs:31:1
   |
27 |     v.push(&x);
   |             - borrow occurs here
...
31 | }
   | ^ `x` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: `y` does not live long enough
  --> $DIR/vec_refs_data_with_early_death.rs:31:1
   |
28 |     v.push(&y);
   |             - borrow occurs here
...
31 | }
   | ^ `y` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

